Rahul update E and F

--- a/B.tex
+++ b/B.tex
@@ -355,7 +355,7 @@ Using this technique, we systematically create a family of heart models with dif
 % \subsubsection{Merging Activation-generating Nodes}
 % \subsubsection{Replace ERP Blocking With Non-deterministic Conduction}
 % \subsubsection{Replace }
-\section{Conclusion}
+\noindent\textbf{Discussion:}\\
 In this chapter, we use heart modeling as example to demonstrate how to develop physiological models for closed-loop evaluation of closed-loop medical devices. We emphasized that models should be developed according to their applications. We developed heart models based on clinical Electrophysiological Testing, and modeled the topological and temporal behaviors of the heart with timed-automata formulation. In the next chapter we will demonstrate the identification and validation of the heart models.
 
 
