--- a/F.tex
+++ b/F.tex
@@ -1,5 +1,5 @@
 \chapter{Closed-loop Model Simulation and Testing}
-Model checking is performed on abstract models of the system, which is the first step during the development process. The verified system model during model checking is translated into Stateflow model, which is a step towards the code implementation. Closed-loop simulation/testing are performed on more refined model or the actual system thus can complement model checking in terms of resolving ambiguities within abstract counterexamples. We aim to answer the following questions here:
+Model checking is performed on abstract models of the system, which is at an early stage in the development process. The verified system model during model checking is then translated into a Stateflow model, which is a step towards simulation-based testing and subsequently to code generation. Closed-loop simulation/testing are performed on more refined deterministic models, and on the actual system, complement model checking in terms of resolving ambiguities within abstract counterexamples. We aim to answer the following questions here:
 
 \begin{itemize}
 	\vspace{-5pt}
@@ -11,27 +11,30 @@ Model checking is performed on abstract models of the system, which is the first
 In this chapter, we first describe an approach to automatically translate formal models that are verified in UPPAAL to Stateflow charts for simulation-based testing, and then code generated to run on an embedded platform. Following this, we demonstrate two examples that cannot be explicitly modeled using abstract semantics and must be tested.
 
 \section{UPPAAL to Stateflow Automated Model Translation}
-Consider an UPPAAL model with automata $P_1,...,P_n$. We have developed a tool, UPP2SF (\cite{TECS}), to translate UPPAAL models Stateflow (see \figref{method}). In this case, UPP2SF produces to a two-level Stateflow chart as in \figref{chart}, with parallel states $P_1,...,P_n$ (referred to as the \textit{parent} states) derived from the automata, parallel states $Gc\_{x_1},..., Gc\_{x_m}$ (referred to as \textit{clock states}) that model all global clocks $x_1,...,x_m$ from the UPPAAL model, and the state $Eng$ that is used as the chart's control execution engine.
-In addition, the chart has predefined global data variables (and constants) with appropriate variable ranges and initial values obtained from the UPPAAL model. 
-Since all automata in UPPAAL are simultaneously active, the obtained Stateflow chart is a collection of parallel states with unique execution orders. Also, in every UPPAAL automaton exactly one location is active at a time. Thus, each of the parent states is a collection of exclusive states, extracted from locations in the UPPAAL automaton. In \cite{TECS}, we have shown that for a large class of UPPAAL models, UPP2SF preserves behavior of the initial UPPAAL model. We have also shown how the translation tool provides a way to estimate WCET during modeling and verification stage in UPPAAL, and facilitates development of modular code from UPPAAL timed-automata based models. 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\begin{figure*}[!t]
+\begin{figure*}[!b]
 \centering
 		\subfigure 
 		{			
-		\includegraphics[width=0.42\textwidth]{figs/method_new1.png}		
+		\includegraphics[width=0.45\textwidth]{figs/method_new1.png}		
 		\label{fig:method}
 		}
 		\hspace{.2in} 
 		\subfigure 
 		{	
-			\includegraphics[width=0.42\textwidth]{figs/chart_GlobalClocks_rev1.png}
+			\includegraphics[width=0.45\textwidth]{figs/chart_GlobalClocks_rev1.png}
 			\label{fig:chart}
 		}
-\caption{(a)~MDD-based framework: From UPPAAL to Stateflow to generated code -- covering model verification, simulation-based testing and platform testing.~(b) Structure of Stateflow charts derived by UPP2SF. Parent states $P_1,...,P_n$ are derived from automata, while the \textit{clock} states $Gc\_{x_1},..., Gc\_{x_m}$ model all global clocks $x_1,...,x_m$ from the UPPAAL model. The state $Eng$ is used to control execution of the chart.}
+\caption{(a)~Model Driven Design framework: From UPPAAL to Stateflow to generated code -- covering model verification, simulation-based testing and platform testing.~(b) Structure of Stateflow charts of the pacemaker's five basic timing cycles (from Fig. \ref{fig:PMdesign}) derived by the UPP2SF model translator. Parent states $P_1,...,P_n$ are derived from automata, while the \textit{clock} states $Gc\_{x_1},..., Gc\_{x_m}$ model all global clocks $x_1,...,x_m$ from the UPPAAL model. The state $Eng$ is used to control execution of the chart.}
 \label{fig:upp2sftool}
 \end{figure*} 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+We have developed a model translation tool, UPP2SF (\cite{TECS}), to translate UPPAAL models to Stateflow (see \figref{method}). Consider an UPPAAL model with automata $P_1,...,P_n$.  In this case, UPP2SF produces to a two-level Stateflow chart as in \figref{chart}, with parallel states $P_1,...,P_n$ (referred to as the \textit{parent} states) derived from the automata, parallel states $Gc\_{x_1},..., Gc\_{x_m}$ (referred to as \textit{clock states}) that model all global clocks $x_1,...,x_m$ from the UPPAAL model, and the state $Eng$ that is used as the chart's control execution engine.
+In addition, the chart has predefined global data variables (and constants) with appropriate variable ranges and initial values obtained from the UPPAAL model. 
+Since all automata in UPPAAL are simultaneously active, the obtained Stateflow chart is a collection of parallel states with unique execution orders. Also, in every UPPAAL automaton exactly one location is active at a time. Thus, each of the parent states is a collection of exclusive states, extracted from locations in the UPPAAL automaton. 
+
+In \cite{TECS}, we show that for a large class of UPPAAL models, UPP2SF preserves behavior of the initial UPPAAL model in the generated Stateflow models. The translation tool provides a way to estimate the worst case execution time (WCET) during modeling and verification stage in UPPAAL, and facilitates development of modular code from timed-automata based models. 
 
 %%\begin{figure} [!t]
 %%\center
@@ -43,17 +46,16 @@ Since all automata in UPPAAL are simultaneously active, the obtained Stateflow c
 The UPPAAL model of the DDD pacemaker model in \figref{PMdesign} is translated into Stateflow chart presented in \figref{PM_sf} using the UPP2SF tool.
 \begin{figure*} [!t]
 \center
-\includegraphics[width=1.00\textwidth]{figs/PM_SF_buffer_newC1.png} 
+\includegraphics[width=0.98\textwidth]{figs/PM_SF_buffer_newC1.png} 
 \caption{Pacemaker Stateflow chart extracted using UPP2SF from the UPPAAL model in~\figref{PMdesign}; the heart and buffer models are highlighted.} 
 \label{fig:PM_sf}
 \end{figure*}
-
 We generated C code from the pacemaker Stateflow chart using the Simulink Coder. The code structure is shown in \figref{pm_code}.
-The code was generated for the general embedded real-time target and as a result we obtained the main procedure, \texttt{rt\_OneStep}, which processes the three input events, $VinB$, $AinB$ and $clk$. To ensure that the model semantics is preserved (modulo the execution time), $clk$ input events should be created every 1ms, followed by the procedure's activation. This makes it suitable for implementation on top of a real-time operating system (RTOS).
+The code was generated for the general embedded real-time target and as a result we obtained the main procedure, \texttt{rt\_OneStep}, which processes the three input events, $VinB$, $AinB$ and $clk$. To ensure that the model semantics are preserved (modulo the execution time), $clk$ input events should be created every 1ms, followed by the procedure's activation. This makes it suitable for implementation on top of a real-time operating system (RTOS).
 
 \begin{figure*} [!t]
 \center
-\includegraphics[width=0.77\textwidth]{figs/CodeListingFinal.png}
+\includegraphics[width=0.85\textwidth]{figs/CodeListingFinal.png}
 \caption{Structure of the pacemaker code obtained from the Stateflow chart shown in \figref{PM_sf}.}
 \label{fig:pm_code}
 \end{figure*}
@@ -124,19 +126,24 @@ Lead displacement affects many patients and can result in inappropriate or ineff
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
  \begin{figure}
 \center
-\includegraphics[width=0.60\textwidth]{figs/race_cond.pdf}
+\includegraphics[width=0.80\textwidth]{figs/race_cond.pdf}
 \caption{Dotted line shows the location where the atrial lead should be}
 %\vspace{-15pt}
 \label{fig:race_cond}
 \end{figure}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-One common case for lead dislodge is shown in \figref{race_cond}, where the atrial lead has fallen into the right ventricle outflow tract. In this case the atrial lead senses from the ventricle rather than atrium and atrial pacing will initiate a ventricular event. \figref{dislodge} shows the simulated EGMs in this case. The figure reveals several facts: 1) No P wave is sensed or tracked (Marker 1). 2) Atrial Pace initiates an abnormal, wide QRS which is then sensed by the ventricle lead (Marker 2). 3) Intermittent appearance of VP on QRS 110 ms after the AP. The ventricular lead can receive signal from: 1) pacing signal sent from the atrial lead, 2) the intrinsic A-V conduction path. The two path are shown in \figref{race_cond} and form a timing race condition. When the signal from the atrial lead arrives the ventricular lead first, it will trigger VS. If the intrinsic signal arrives the ventricular lead during the VSP sensing window (defined in previous section), it will trigger VSP. Although the pacing is 'safe' because the pacing is early enough to avoid the vulnerable refractory period, the damage caused by pacing on depolarized tissue is currently a matter of much investigation. 
-\section{Conclusion}
-In this chapter, we first introduced a mathematical translation method from UPPAAL timed automata model to Stateflow chart. Combined with Simulink coder, the tool chain provides rigorous evidence of traceability from physiological requirements to the C code implementation. Oversensing, crosstalk and lead displacement are three examples in which the cause of the problem is not modeled in the abstract interface in the timed-automata model. In such cases, closed-loop testing with the more refined heart models and EGM interface can be used to provide safety evidence.
+One common case for lead dislodge is shown in \figref{race_cond}, where the atrial lead has fallen into the right ventricle outflow tract. In this case the atrial lead senses from the ventricle rather than atrium and atrial pacing will initiate a ventricular event. \figref{dislodge} shows the simulated EGMs in this case. The figure reveals several facts: 1) No P wave is sensed or tracked (Marker 1). 2) Atrial Pace initiates an abnormal, wide QRS which is then sensed by the ventricle lead (Marker 2). 3) Intermittent appearance of VP on QRS 110 ms after the AP. The ventricular lead can receive signal from: 1) pacing signal sent from the atrial lead, 2) the intrinsic A-V conduction path. The two paths are shown in \figref{race_cond} and form a timing race condition. When the signal from the atrial lead arrives the ventricular lead first, it will trigger VS. If the intrinsic signal arrives the ventricular lead during the VSP sensing window (defined in previous section), it will trigger VSP. Although the pacing is 'safe' because the pacing is early enough to avoid the vulnerable refractory period, the damage caused by pacing on depolarized tissue is currently a matter of much investigation.\\
 
-\chapter{Conclusion and Future Work}
-Closed-loop medical devices like implantable cardiac devices have both diagnostic and therapeutic capabilities and interact with the patient autonomously in closed-loop. Their autonomy makes them the highest risk devices which requires the most stringent regulation. Currently clinical trials are the only mean to identify risks associated with the closed-loop interaction between the devices and the patient, which are both expensive and ineffective. Model-based design can potentially enable closed-loop evaluation earlier in the design process, which requires validated physiological models that can represent the closed-loop interaction of different physiological conditions. In this work, we use implantable pacemaker as example to demonstrate the application of model-based design in providing safety and effectiveness evidence of the device and how these activities fit into the regulation process. We developed heart models that capture the behaviors of various heart conditions, and tailored the heart models for closed-loop model checking and closed-loop testing, which have different requirements. In closed-loop model checking, an abstract model of the pacemaker was verified against physiological requirements. We identified the need for heart models at different abstraction level and demonstrated an automated approach to select the most appropriate heart model for specific requirements. The abstract model of the pacemaker was then translated to Stateflow chart using a mathematical procedure and then generated into C code implementation. In closed-loop testing, we use more refined heart models to capture mechanisms that were not captured in the abstract heart models and evaluated pacemaker algorithms. 
+\noindent\textbf{Summary:}\\
+In this chapter, we first introduced a model translation method from UPPAAL timed automata models to Stateflow charts. Combined with Simulink coder, the tool chain provides rigorous evidence of traceability from physiological requirements to the C code implementation. Oversensing, crosstalk and lead displacement are three examples in which the cause of the problem is not modeled in the abstract interface in the timed-automata model. In such cases, closed-loop testing with the more refined heart models and EGM interface can be used to provide safety evidence.
+
+\chapter{Discussion and Open Challenges}
+Closed-loop medical devices like implantable cardiac devices have both diagnostic and therapeutic capabilities and interact with the patient autonomously in closed-loop. Their autonomy makes them among the highest risk devices which require the most stringent regulation. Currently, clinical trials are the primary means to identify risks associated with the closed-loop interaction between the devices and the patient. While such clinical trials are a necessity they are expensive and ineffective for verification of the safety and efficacy of medical device software. 
+
+Model-based design can potentially enable closed-loop evaluation earlier in the design process. This approach requires validated physiological models that represents the closed-loop interaction of different physiological conditions from the device's perspective. In this effort, we use an implantable pacemaker as an example to demonstrate the application of model-based design in providing safety and effectiveness towards ``regulatory grade evidence" of the device and describe how these activities align into the regulatory process. 
+
+We developed heart models that capture the behavior across a range of heart conditions, and tailored the heart models for closed-loop model checking and closed-loop testing, which have different requirements. In closed-loop model checking, an abstract model of the pacemaker was verified against physiological requirements. We identified the need for heart models at different abstraction levels and demonstrated an automated approach to select the most appropriate heart model for specific safety requirements. The abstract model of the pacemaker was then automatically translated to Stateflow chart using a model translation tool and then generated into C code implementation. With this model-driven design, we are able to retain the safety properties of the modeled device from verified models to verified code. In closed-loop testing, we use more refined heart models to capture mechanisms that were not captured in the abstract heart models and evaluated pacemaker algorithms. 
 
 %As implantable medical devices grow in sophistication with significant capabilities implemented in software, firmware bugs account for an increasing fraction of device recalls. Since the FDA  does not test, verify or certify the software in such devices, there is an urgent need for a systematic methodology to guarantee the safety of the device software. Furthermore, this safety must account for the closed-loop interaction with the organs of interest. In this effort, we have presented a first step in the direction of a holistic approach for model-based testing and physical patient--device interactive validation. We achieve this through the design of an integrated functional and formal model of the heart and pacemaker device using timed automata. Using this closed-loop system, we conducted formal verification and translate the models to Stateflow for simulation-based testing and then automatically generate code from the verified models. We investigated basic operations, complex algorithms such as response to Pacemaker Mediated Tachycardia and platform-based testing of physical issues such as crosstalk and lead displacement. 
 
@@ -144,11 +151,11 @@ Closed-loop medical devices like implantable cardiac devices have both diagnosti
 
 %This effort describes early steps toward cyber-physical model based testing, validation and verification of medical cyber-physical systems. This is a challenging domain as patient modeling is both complex, highly variable and non-deterministic and the safety properties must include over-approximated models for verification, abstract models for simulation and be realizable in physical form for testing. We aim to extend the current efforts to evaluate more complex devices such as implantable cardioverter defibrillators (ICDs) which are rate-adaptive and operate with varying levels of hysteresis. 
 
-Eventually we aim to conduct model-based clinical trials with automated approaches to program and tune patient-specific electrophysiological heart models using data acquired from ablation procedures. By applying parametric and sensitivity analysis to a small sampling of real patient heart models, across a select set of cardiac conditions, to derive a physiologically relevant population of patient models. This allows us to explore a wider range of heart behaviors and expose more corner cases to isolate software safety issues prior to an actual clinical trial. Using certified heart models, a model-based clinical trial provides additional confidence in the closed-loop safety and efficacy of medical devices prior to expensive clinical-trials which are prone to failure. 
+Eventually we aim to conduct \emph{Model-based Clinical Trials} with automated approaches to capture and tune patient-specific electrophysiological heart models using data acquired from ablation procedures. By applying parametric and sensitivity analysis to a small sampling of real patient heart models, across a select set of cardiac conditions, to derive a statistically significant, and physiologically relevant, population of patient models. This allows us to explore a wider range of heart behaviors and expose more corner cases to isolate software safety issues prior to an actual clinical trial. Using certified heart models, a model-based clinical trial provides additional confidence in the closed-loop safety and efficacy of medical devices prior to randomized controlled clinical trials. Model-based clinical trials for medical device software have the potential to complement the current regulatory approach by reducing the cost, scope and probability of failure of a traditional clinical trials. The area of Medical Cyber-Physical Systems is in its early days with several exciting and urgent fundamental challenges in modeling, control, verification and testing for higher confidence life-critical systems.
 
 %\subsection{Acknowledgements}
 \begin{acknowledgements}
-The authors would like to thank Houssam Abbas, Rajeev Alur, George M. Chen, Allison Connolly, Sanjay Dixit, Insup Lee, Pieter Mosterman, Miroslav Pajic, Oleg Sokolsky and Larisa G. Tereshchenko for fruitful discussions during the preparation of this manuscript. This research was supported in part by NSF CNS-0720518, NSF CNS-1035715, NSF MRI-0923518, NSF CPS Frontier 1446664 and NSF CAREER-1253842 grants. This work was also supported by STARnet - a Semiconductor Research Corporation program sponsored by MARCO and DARPA.
+The authors would like to thank Houssam Abbas, Rajeev Alur, George M. Chen, Allison Connolly, Sanjay Dixit, Insup Lee, Pieter Mosterman, Miroslav Pajic, Oleg Sokolsky and Larisa G. Tereshchenko for fruitful discussions during the preparation of this manuscript. This research was supported in part by NSF CNS-0720518, NSF CNS-1035715, NSF MRI-0923518, NSF CPS Frontier 1446664 and NSF CAREER-1253842 grants. This work was also supported in part by STARnet - a Semiconductor Research Corporation program sponsored by MARCO and DARPA.
 \end{acknowledgements}
 %%\chapter{Certification}
 %%\begin{itemize}
